[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.197"
sha3 = "0.10.8"
tfhe = { version = "0.5.3", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }
